--- a/templates/tasks/new.html
+++ b/templates/tasks/new.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-<a href="/tasks" class="go_back">Back to tasks</a>
+<h1>New task:</h1>
+<a href="/tasks" class="site_link">Back to tasks</a>
 
 <form action="/tasks" method="POST">
     <!-- Description -->
