--- a/static/style.css
+++ b/static/style.css
@@ -10,9 +10,35 @@ a:visited {
   color: black;
 }
 
-.go_back {
+.site_link {
   border: 1px solid rgb(221, 221, 221);
+  color: black;
   padding: 3px;
+  margin: auto 0 auto auto;
+  height: fit-content;
+  box-shadow: 3px 3px 0 gray;
+}
+
+.site_link:hover {
+  transform: translateY(3px) translateX(3px);
+  box-shadow: none;
+}
+
+.site_link:active {
+  transform: translateY(3px) translateX(3px);
+  box-shadow: -3px -3px 0 rgb(73, 73, 73);
+  padding: 3px 0px 0px 3px;
+}
+
+.delete_button {
+  background-color: white;
+  border: 1px solid rgb(195, 195, 195);
+  color: rgb(195, 195, 195)
+}
+
+.delete_button:hover {
+  box-shadow: 0px 0px 10px red;
+  color: red;
 }
 
 .task {
@@ -23,6 +49,23 @@ a:visited {
   display: flex;
   line-height: 18px;
   margin-bottom: 10px;
+}
+
+.task:hover {
+  padding-left: 30px;
+}
+
+.click {
+  width: 100px;
+  height:fit-content;
+  text-align: right;
+  margin: auto 0 0 auto;
+  font-size: 10px;
+  color: white;
+}
+
+.task:hover .click {
+  color:rgb(195, 195, 195)
 }
 
 .name {
@@ -92,5 +135,9 @@ input, select, button {
   display: flex;
   flex-wrap: wrap;
   width: 300px;
-  margin: 0 auto;
+  margin: 0 auto 0 10px;
+}
+
+article {
+  width: 300px;
 }
